# Benchmark-Orchestrator

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
chat-export/: builder.txt  tests.txt
data/: benchmark.csv  queue.jsonl
decisions/: 001-python-stack.md  002-two-separate-deployments.md  003-openapi-contract.md  004-docker-compose-strategy.md  005-build-order-sut-first.md
docs/: ASSIGNMENT.md  openapi.json
docs/sample-results/: results_20260719_133510.json  results_20260719_133510_queries.csv
inference-service/: Dockerfile  pyproject.toml
inference-service/decisions/: 001-mock-backend.md  002-rate-limiter-semantics.md
inference-service/scripts/: export_openapi.py
inference-service/src/inference_service/: app.py  backends.py  config.py  rate_limiter.py
inference-service/tests/: test_app.py  test_contract.py  test_rate_limiter.py
orchestrator/: Dockerfile  pyproject.toml
orchestrator/decisions/: 001-aimd-discovery.md  002-rich-tui.md  003-retry-policy.md  004-contract-fake-for-tests.md  005-fifo-admission.md
orchestrator/src/orchestrator/: cli.py  client.py  controller.py  grading.py  jobs.py  metrics.py  report.py  runner.py  tui.py
orchestrator/tests/: fake_server.py  test_controller.py  test_integration.py  test_units.py
