[project]
name = "inference-service"
version = "0.1.0"
description = "Rate-limited HTTP inference service wrapping Ollama (H Company FDE take-home)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.scripts]
inference-service = "inference_service.app:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inference_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
